tests/toy/neg/000652_mutation.toylang
program a = { a = a == while a; } .
